--- a/composer.json
+++ b/composer.json
@@ -5,36 +5,37 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.4",
+        "php": "^8.5",
+        "aws/aws-sdk-php": "^3.369.15",
         "codeat3/blade-phosphor-icons": "^2.3",
-        "filament/filament": "^4.1.4",
+        "filament/filament": "^v5.0.0",
         "laravel/breeze": "^2.3.8",
-        "laravel/framework": "^12.33.0",
-        "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6.4",
-        "sentry/sentry-laravel": "^4.16.0",
-        "spatie/laravel-markdown": "^2.7.1",
-        "aws/aws-sdk-php": "^3.356.34",
-        "league/flysystem-aws-s3-v3": "^3.29.0",
-        "livewire/flux": "^2.5.1",
-        "livewire/flux-pro": "^2.5.1"
+        "laravel/framework": "^12.47.0",
+        "laravel/octane": "^2.13.4",
+        "laravel/tinker": "^2.11.0",
+        "league/flysystem-aws-s3-v3": "^3.30.1",
+        "livewire/flux": "^2.10.2",
+        "livewire/flux-pro": "^2.10.2",
+        "livewire/livewire": "^v4.0.1",
+        "sentry/sentry-laravel": "^4.20.1",
+        "spatie/laravel-markdown": "^2.7.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.16.0",
-        "driftingly/rector-laravel": "^2.0.7",
+        "barryvdh/laravel-debugbar": "^3.16.3",
+        "driftingly/rector-laravel": "^2.1.9",
         "fakerphp/faker": "^1.24.1",
-        "filament/upgrade": "^4.1.4",
-        "laravel/pint": "^1.25.1",
+        "filament/upgrade": "^v5.0.0",
+        "laravel/pint": "^1.27.0",
         "mockery/mockery": "^1.6.12",
-        "nunomaduro/collision": "^8.8.2",
-        "pestphp/pest": "^3.8.4",
-        "pestphp/pest-plugin-faker": "^v3.0.0",
-        "pestphp/pest-plugin-laravel": "^3.2.0",
-        "pestphp/pest-plugin-type-coverage": "^3.6.1",
+        "nunomaduro/collision": "^8.8.3",
+        "pestphp/pest": "^v4.3.1",
+        "pestphp/pest-plugin-faker": "^v4.0.0",
+        "pestphp/pest-plugin-laravel": "^v4.0.0",
+        "pestphp/pest-plugin-type-coverage": "^v4.0.3",
         "roave/security-advisories": "dev-latest",
-        "rector/rector": "^2.2.1",
-        "larastan/larastan": "^3.7.2",
-        "laravel/boost": "^1.3.0"
+        "rector/rector": "^2.3.1",
+        "larastan/larastan": "^3.8.1",
+        "laravel/boost": "^1.8.10"
     },
     "autoload": {
         "psr-4": {
