--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,89 +1,77 @@
-version: '3.8'
-
 x-web-image: &web-image
   build:
     context: .
     dockerfile: Dockerfile
     target: web
 
-x-worker-image: &worker-image
-  build:
-    context: .
-    dockerfile: Dockerfile
-    target: worker
-
 x-app-volumes: &app-volumes
   volumes:
-    - './storage:/var/www/html/storage'
+    - 'app-storage:/var/www/html/storage:noexec,nosuid,nodev'
+  tmpfs:
+    - /tmp:noexec,nosuid,nodev,mode=1777
 
-x-app-environment: &app-environment
-  AUTORUN_ENABLED: '${AUTORUN_ENABLED}'
-  APP_NAME: '${APP_NAME}'
-  APP_ENV: '${APP_ENV}'
-  APP_KEY: '${APP_KEY}'
-  APP_PREVIOUS_KEYS: '${APP_PREVIOUS_KEYS}'
-  APP_DEBUG: '${APP_DEBUG}'
-  APP_TIMEZONE: '${APP_TIMEZONE}'
-  APP_URL: '${APP_URL}'
-  APP_LOCALE: '${APP_LOCALE}'
-  APP_FALLBACK_LOCALE: '${APP_FALLBACK_LOCALE}'
-  APP_FAKER_LOCALE: '${APP_FAKER_LOCALE}'
-  APP_MAINTENANCE_DRIVER: '${APP_MAINTENANCE_DRIVER}'
-  APP_MAINTENANCE_STORE: '${APP_MAINTENANCE_STORE}'
-  BCRYPT_ROUNDS: '${BCRYPT_ROUNDS}'
-  LOG_CHANNEL: '${LOG_CHANNEL}'
-  LOG_STACK: '${LOG_STACK}'
-  LOG_DEPRECATIONS_CHANNEL: '${LOG_DEPRECATIONS_CHANNEL}'
-  LOG_LEVEL: '${LOG_LEVEL}'
-  DB_CONNECTION: '${DB_CONNECTION}'
-  DB_HOST: '${DB_HOST}'
-  DB_PORT: '${DB_PORT}'
-  DB_DATABASE: '${DB_DATABASE}'
-  DB_USERNAME: '${DB_USERNAME}'
-  DB_PASSWORD: '${DB_PASSWORD}'
-  SESSION_DRIVER: '${SESSION_DRIVER}'
-  SESSION_LIFETIME: '${SESSION_LIFETIME}'
-  SESSION_ENCRYPT: '${SESSION_ENCRYPT}'
-  SESSION_PATH: '${SESSION_PATH}'
-  SESSION_DOMAIN: '${SESSION_DOMAIN}'
-  BROADCAST_CONNECTION: '${BROADCAST_CONNECTION}'
-  FILESYSTEM_DISK: '${FILESYSTEM_DISK}'
-  QUEUE_CONNECTION: '${QUEUE_CONNECTION}'
-  CACHE_STORE: '${CACHE_STORE}'
-  CACHE_PREFIX: '${CACHE_PREFIX}'
-  MEMCACHED_HOST: '${MEMCACHED_HOST}'
-  REDIS_CLIENT: '${REDIS_CLIENT}'
-  REDIS_HOST: '${REDIS_HOST}'
-  REDIS_PASSWORD: '${REDIS_PASSWORD}'
-  REDIS_PORT: '${REDIS_PORT}'
-  MAIL_MAILER: '${MAIL_MAILER}'
-  MAIL_HOST: '${MAIL_HOST}'
-  MAIL_PORT: '${MAIL_PORT}'
-  MAIL_USERNAME: '${MAIL_USERNAME}'
-  MAIL_PASSWORD: '${MAIL_PASSWORD}'
-  MAIL_ENCRYPTION: '${MAIL_ENCRYPTION}'
-  MAIL_FROM_ADDRESS: '${MAIL_FROM_ADDRESS}'
-  MAIL_FROM_NAME: '${MAIL_FROM_NAME}'
-  AWS_ACCESS_KEY_ID: '${AWS_ACCESS_KEY_ID}'
-  AWS_SECRET_ACCESS_KEY: '${AWS_SECRET_ACCESS_KEY}'
-  AWS_DEFAULT_REGION: '${AWS_DEFAULT_REGION}'
-  AWS_BUCKET: '${AWS_BUCKET}'
-  AWS_USE_PATH_STYLE_ENDPOINT: '${AWS_USE_PATH_STYLE_ENDPOINT}'
-  DO_ACCESS_KEY_ID: '${DO_ACCESS_KEY_ID}'
-  DO_SECRET_ACCESS_KEY: '${DO_SECRET_ACCESS_KEY}'
-  DO_DEFAULT_REGION: '${DO_DEFAULT_REGION}'
-  DO_BUCKET: '${DO_BUCKET}'
-  DO_ENDPOINT: '${DO_ENDPOINT}'
-  DO_USE_PATH_STYLE_ENDPOINT: '${DO_USE_PATH_STYLE_ENDPOINT}'
-  DO_URL: '${DO_URL}'
-  VITE_APP_NAME: '${APP_NAME}'
-  SENTRY_LARAVEL_DSN: '${SENTRY_LARAVEL_DSN}'
-  FLUX_USERNAME: '${FLUX_USERNAME}'
-  FLUX_LICENSE_KEY: '${FLUX_LICENSE_KEY}'
+x-security-opts: &security-opts
+  security_opt:
+    - no-new-privileges:true
+  cap_drop:
+    - ALL
+  cap_add:
+    - NET_BIND_SERVICE
+    - CHOWN
+    - SETGID
+    - SETUID
+    - DAC_OVERRIDE
+
+x-resource-limits: &resource-limits
+  deploy:
+    resources:
+      limits:
+        memory: 512M
+      reservations:
+        memory: 128M
+
+x-logging: &logging
+  logging:
+    driver: "json-file"
+    options:
+      max-size: "10m"
+      max-file: "3"
+
+x-app-env-file: &app-env-file
+  env_file:
+    - .env
+
+x-docker-environment: &docker-environment
+  AUTORUN_ENABLED: true
+
+networks:
+  app-network:
+    driver: bridge
+    internal: false
+
 
 services:
   app:
-    <<: [*web-image, *app-volumes]
+    <<: [*web-image, *app-volumes, *security-opts, *resource-limits, *logging, *app-env-file]
     environment:
-      <<: *app-environment
+      <<: *docker-environment
       PHP_FPM_POOL_NAME: "app"
+    command: ["php", "artisan", "octane:start", "--server=frankenphp", "--port=8080"]
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.${TRAEFIK_SERVICE_NAME:-antonloginov-com}.rule=Host(`${APP_DOMAIN:-antonloginov.com}`)"
+      - "traefik.http.routers.${TRAEFIK_SERVICE_NAME:-antonloginov-com}.entrypoints=https"
+      - "traefik.http.routers.${TRAEFIK_SERVICE_NAME:-antonloginov-com}.tls=true"
+      - "traefik.http.routers.${TRAEFIK_SERVICE_NAME:-antonloginov-com}.tls.certresolver=letsencrypt"
+      - "traefik.http.services.${TRAEFIK_SERVICE_NAME:-antonloginov-com}.loadbalancer.server.port=8080"
+    healthcheck:
+      test: ["CMD", "healthcheck-octane"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    restart: unless-stopped
+    networks:
+      - app-network
+    stop_signal: SIGTERM
+    stop_grace_period: 10s
